--- a/packages/libro-lab/src/layout/index.less
+++ b/packages/libro-lab/src/layout/index.less
@@ -21,7 +21,6 @@
     height: 28px;
     min-height: 28px;
     background: var(--mana-libro-lab-footer-background);
-    box-shadow: 0 -1px 1px 0 rgba(0, 0, 0, 12%);
   }
 
   .mana-header {
